ENT-6914 - Upgrade to jdk17-kotlin19 - Fixed tests